--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^13.9.1",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-highcharts": "^16.0.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
@@ -17,6 +18,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-highcharts": "^16.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
